[package]
name = "yew-router-qs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.79", default-features = false }
web-sys = { version = "0.3.56", features = ["Location", "History", "Window"] }